Calico/Example/global-network-policy-basic.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: demo-gnp
