Calico/Example/namespaced-network-policy-basic.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: demo-np
  namespace: demo
